vagrant/chapter8/k8s/8.5/concert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concert
  labels:
    app: concert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concert
  template:
    metadata:
      labels:
        app: concert
    spec:
      containers:
      - name: concert
        image: zhanyang/concert:1.0
        ports:
        - containerPort: 8182
        args:
        - "/app/concert"
        - "-c"
        - "/etc/concert/config.json"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8182
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: concert-config
          mountPath: /etc/concert
          readOnly: true
      volumes:
      - name: concert-config
        configMap:
          name: concert-config
---
apiVersion: v1
kind: Service
metadata:
  name: concert
spec:
  selector:
    app: concert
  clusterIP: None
  ports:
  - name: http
    port: 8182
