vagrant/chapter8/k8s/8.5/linkerd-ingress-controller-tls.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: l5d-ingress-controller-tls
  name: l5d-ingress-controller-tls
spec:
  selector:
    matchLabels:
      app: l5d-ingress-controller-tls
  template:
    metadata:
      labels:
        app: l5d-ingress-controller-tls
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "node-role.kubernetes.io/master"
        effect: "NoSchedule"
      nodeName: kube-master
      volumes:
      - name: l5d-config-ingress-controller-tls
        configMap:
          name: "l5d-config-ingress-controller-tls"
      - name: ingress-cert
        secret:
          secretName: "ingress-cert"
      containers:
      - name: l5d-ingress-controller-tls
        image: buoyantio/linkerd:1.3.6
        args:
        - /io.buoyant/linkerd/config/config.yaml
        ports:
        - name: https
          containerPort: 443
        - name: admin
          containerPort: 9990
        volumeMounts:
        - name: "l5d-config-ingress-controller-tls"
          mountPath: "/io.buoyant/linkerd/config"
        - name: "ingress-cert"
          mountPath: "/io.buoyant/linkerd/tls"
      - name: kubectl
        image: zhanyang/kubectl:1.9.3
        args: 
        - "proxy" 
        - "-p"
        - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-ingress-controller-tls
spec:
  selector:
    app: l5d-ingress-controller-tls
  clusterIP: None
  ports:
  - name: https
    port: 443
  - name: admin
    port: 9990
