vagrant/chapter8/k8s/8.5/linkerd-ingress-controller.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: l5d-ingress-controller
  name: l5d-ingress-controller
spec:
  selector:
    matchLabels:
      app: l5d-ingress-controller
  template:
    metadata:
      labels:
        app: l5d-ingress-controller
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      tolerations:
      - key: "node-role.kubernetes.io/master"
        effect: "NoSchedule"
      nodeName: kube-master
      volumes:
      - name: l5d-config-ingress-controller
        configMap:
          name: "l5d-config-ingress-controller"
      containers:
      - name: l5d-ingress-controller
        image: buoyantio/linkerd:1.3.6
        args:
        - /io.buoyant/linkerd/config/config.yaml
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 9990
        volumeMounts:
        - name: "l5d-config-ingress-controller"
          mountPath: "/io.buoyant/linkerd/config"

      - name: kubectl
        image: zhanyang/kubectl:1.9.3
        args: 
        - "proxy" 
        - "-p"
        - "8001"
---
apiVersion: v1
kind: Service
metadata:
  name: l5d-ingress-controller
spec:
  selector:
    app: l5d-ingress-controller
  clusterIP: None
  ports:
  - name: http
    port: 80
  - name: admin
    port: 9990
